--- a/frontend/src/app/modules/features/profile/profile.component.html
+++ b/frontend/src/app/modules/features/profile/profile.component.html
@@ -1,15 +1,28 @@
 <app-page-layout>
   <div *ngIf="user">
-    <h1>
-      {{ user.firstName }}
-      {{ user.lastName }}
-    </h1>
-    <p>{{ user.email }}</p>
-    <button class="btn btn-outline-primary" routerLink="/">
-      Nutzerdaten Ändern
-    </button>
-    <button class="btn btn-outline-primary" routerLink="/">
-      Account Löschen
-    </button>
+    <h1>Profil</h1>
+    <h3>Deine Kontodaten</h3>
+
+    <div class="position-relative">
+      <button
+        class="btn btn-outline-primary position-absolute top-0 end-0"
+        routerLink="/"
+      >
+        Nutzerdaten ändern
+      </button>
+      <div class="d-grid p-3">
+        <strong>Vorname</strong>
+        <span class="text-truncate">{{ user.firstName }}</span>
+      </div>
+      <div class="d-grid p-3">
+        <strong>Nachname</strong>
+        <span class="text-truncate">{{ user.lastName }}</span>
+      </div>
+      <div class="d-grid p-3">
+        <strong>E-Mail</strong>
+        <span class="text-truncate">{{ user.email }}</span>
+      </div>
+    </div>
+    <button class="btn btn-outline-danger" routerLink="/">Konto Löschen</button>
   </div>
 </app-page-layout>
