--- a/frontend/src/app/modules/features/profile/profile.component.html
+++ b/frontend/src/app/modules/features/profile/profile.component.html
@@ -3,7 +3,7 @@
     <h1 class="display-1">Profil</h1>
     <div class="d-flex justify-content-between align-items-center">
       <h3>Deine Daten</h3>
-      <button class="btn btn-primary" routerLink="/">Ändern</button>
+      <button class="btn btn-primary" routerLink="/change">Ändern</button>
     </div>
 
     <div class="mb-5">
